TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/libtiepieloader.h


extern LibTiePieI2CGetInternalAddresses_t I2CGetInternalAddresses;

extern LibTiePieI2CRead_t I2CRead;

extern LibTiePieI2CReadByte_t I2CReadByte;

extern LibTiePieI2CReadWord_t I2CReadWord;

extern LibTiePieI2CWrite_t I2CWrite;

extern LibTiePieI2CWriteByte_t I2CWriteByte;

extern LibTiePieI2CWriteByteByte_t I2CWriteByteByte;

extern LibTiePieI2CWriteByteWord_t I2CWriteByteWord;

extern LibTiePieI2CWriteWord_t I2CWriteWord;

extern LibTiePieI2CWriteRead_t I2CWriteRead;

extern LibTiePieI2CGetSpeedMax_t I2CGetSpeedMax;

extern LibTiePieI2CGetSpeed_t I2CGetSpeed;

extern LibTiePieI2CSetSpeed_t I2CSetSpeed;

extern LibTiePieI2CVerifySpeed_t I2CVerifySpeed;

extern LibTiePieSrvConnect_t SrvConnect;

extern LibTiePieSrvDisconnect_t SrvDisconnect;

extern LibTiePieSrvRemove_t SrvRemove;

extern LibTiePieSrvGetStatus_t SrvGetStatus;

extern LibTiePieSrvGetLastError_t SrvGetLastError;

extern LibTiePieSrvGetURL_t SrvGetURL;

extern LibTiePieSrvGetID_t SrvGetID;

extern LibTiePieSrvGetIPv4Address_t SrvGetIPv4Address;

extern LibTiePieSrvGetIPPort_t SrvGetIPPort;

extern LibTiePieSrvGetName_t SrvGetName;

extern LibTiePieSrvGetDescription_t SrvGetDescription;

extern LibTiePieSrvGetVersion_t SrvGetVersion;

extern LibTiePieSrvGetVersionExtra_t SrvGetVersionExtra;

extern LibTiePieHlpPointerArrayNew_t HlpPointerArrayNew;

extern LibTiePieHlpPointerArraySet_t HlpPointerArraySet;

extern LibTiePieHlpPointerArrayDelete_t HlpPointerArrayDelete;


LibTiePieStatus_t LibTiePieLoad( const char* pLibrary );