TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas

function I2CGetInternalAddresses( hDevice : TLibTiePieHandle ; pAddresses : PWord ; dwLength : LongWord ) : LongWord; cdecl;
function I2CRead( hDevice : TLibTiePieHandle ; wAddress : Word ; pBuffer : Pointer ; dwSize : LongWord ; bStop : ByteBool ) : ByteBool; cdecl;
function I2CReadByte( hDevice : TLibTiePieHandle ; wAddress : Word ; pValue : PByte ) : ByteBool; cdecl;
function I2CReadWord( hDevice : TLibTiePieHandle ; wAddress : Word ; pValue : PWord ) : ByteBool; cdecl;
function I2CWrite( hDevice : TLibTiePieHandle ; wAddress : Word ; pBuffer : Pointer ; dwSize : LongWord ; bStop : ByteBool ) : ByteBool; cdecl;
function I2CWriteByte( hDevice : TLibTiePieHandle ; wAddress : Word ; byValue : Byte ) : ByteBool; cdecl;
function I2CWriteByteByte( hDevice : TLibTiePieHandle ; wAddress : Word ; byValue1 , byValue2 : Byte ) : ByteBool; cdecl;
function I2CWriteByteWord( hDevice : TLibTiePieHandle ; wAddress : Word ; byValue1 : Byte ; wValue2 : Word ) : ByteBool; cdecl;
function I2CWriteWord( hDevice : TLibTiePieHandle ; wAddress , wValue : Word ) : ByteBool; cdecl;
function I2CWriteRead( hDevice : TLibTiePieHandle ; wAddress : Word ; pWriteBuffer : Pointer ; dwWriteSize : LongWord ; pReadBuffer : Pointer ; dwReadSize : LongWord ) : ByteBool; cdecl;
function I2CGetSpeedMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
function I2CGetSpeed( hDevice : TLibTiePieHandle ) : Double; cdecl;
function I2CSetSpeed( hDevice : TLibTiePieHandle ; dSpeed : Double ) : Double; cdecl;
function I2CVerifySpeed( hDevice : TLibTiePieHandle ; dSpeed : Double ) : Double; cdecl;
function SrvConnect( hServer : TLibTiePieHandle ; bAsync : ByteBool ) : ByteBool; cdecl;
function SrvDisconnect( hServer : TLibTiePieHandle ; bForce : ByteBool ) : ByteBool; cdecl;
function SrvRemove( hServer : TLibTiePieHandle ; bForce : ByteBool ) : ByteBool; cdecl;
function SrvGetStatus( hServer : TLibTiePieHandle ) : LongWord; cdecl;
function SrvGetLastError( hServer : TLibTiePieHandle ) : LongWord; cdecl;
function SrvGetURL( hServer : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function SrvGetID( hServer : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function SrvGetIPv4Address( hServer : TLibTiePieHandle ) : LongWord; cdecl;
function SrvGetIPPort( hServer : TLibTiePieHandle ) : Word; cdecl;
function SrvGetName( hServer : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function SrvGetDescription( hServer : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function SrvGetVersion( hServer : TLibTiePieHandle ) : TTpVersion; cdecl;
function SrvGetVersionExtra( hServer : TLibTiePieHandle ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl;
function HlpPointerArrayNew( dwLength : LongWord ) : TLibTiePiePointerArray; cdecl;
procedure HlpPointerArraySet( pArray : TLibTiePiePointerArray ; dwIndex : LongWord ; pPointer : Pointer ); cdecl;
procedure HlpPointerArrayDelete( pArray : TLibTiePiePointerArray ); cdecl;

{$endif !LIBTIEPIE_DYNAMIC}

// Extra routines:

function TpDateToDateTime( ATpDate : TTpDate ) : TDateTime;
function LibGetConfigDynArray : TByteDynArray;
function LstDevGetNameWS( dwIdKind , dwId : LongWord ) : WideString;
function LstDevGetNameShortWS( dwIdKind , dwId : LongWord ) : WideString;
function LstDevGetNameShortestWS( dwIdKind , dwId : LongWord ) : WideString;
function LstDevGetContainedSerialNumbersDynArray( dwIdKind , dwId : LongWord ) : TLongWordDynArray;
function LstCbDevGetNameWS( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : WideString;
function LstCbDevGetNameShortWS( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : WideString;
function LstCbDevGetNameShortestWS( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : WideString;
procedure LstSetCallbackMethodDeviceAdded( AMethod : TTpCallbackDeviceListMethod );
procedure LstSetCallbackMethodDeviceRemoved( AMethod : TTpCallbackDeviceListMethod );
procedure LstSetCallbackMethodDeviceCanOpenChanged( AMethod : TTpCallbackDeviceListMethod );
procedure NetSrvSetCallbackMethodAdded( AMethod : TTpCallbackHandleMethod );
procedure ObjSetEventCallbackMethod( hHandle : TLibTiePieHandle ; AMethod : TTpCallbackEventMethod );
function DevGetCalibrationTokenWS( hDevice : TLibTiePieHandle ) : WideString;
function DevGetNameWS( hDevice : TLibTiePieHandle ) : WideString;
function DevGetNameShortWS( hDevice : TLibTiePieHandle ) : WideString;
function DevGetNameShortestWS( hDevice : TLibTiePieHandle ) : WideString;
procedure DevSetCallbackMethodRemoved( hDevice : TLibTiePieHandle ; AMethod : TTpCallbackMethod );
function DevTrInGetNameWS( hDevice : TLibTiePieHandle ; wInput : Word ) : WideString;
function DevTrOutGetNameWS( hDevice : TLibTiePieHandle ; wOutput : Word ) : WideString;
function ScpChGetBandwidthsDynArray( hDevice : TLibTiePieHandle ; wCh : Word ) : TDoubleDynArray;
function ScpChGetRangesDynArray( hDevice : TLibTiePieHandle ; wCh : Word ) : TDoubleDynArray;
function ScpChGetRangesExDynArray( hDevice : TLibTiePieHandle ; wCh : Word ; qwCoupling : UInt64 ) : TDoubleDynArray;
procedure ScpSetCallbackMethodDataReady( hDevice : TLibTiePieHandle ; AMethod : TTpCallbackMethod );
procedure ScpSetCallbackMethodDataOverflow( hDevice : TLibTiePieHandle ; AMethod : TTpCallbackMethod );
procedure ScpSetCallbackMethodConnectionTestCompleted( hDevice : TLibTiePieHandle ; AMethod : TTpCallbackMethod );
procedure ScpSetCallbackMethodTriggered( hDevice : TLibTiePieHandle ; AMethod : TTpCallbackMethod );
function ScpGetResolutionsDynArray( hDevice : TLibTiePieHandle ) : TByteDynArray;
function ScpGetClockSourceFrequenciesDynArray( hDevice : TLibTiePieHandle ) : TDoubleDynArray;
function ScpGetClockSourceFrequenciesExDynArray( hDevice : TLibTiePieHandle ; dwClockSource : LongWord ) : TDoubleDynArray;
function ScpGetClockOutputFrequenciesDynArray( hDevice : TLibTiePieHandle ) : TDoubleDynArray;
function ScpGetClockOutputFrequenciesExDynArray( hDevice : TLibTiePieHandle ; dwClockOutput : LongWord ) : TDoubleDynArray;
function GenGetAmplitudeRangesDynArray( hDevice : TLibTiePieHandle ) : TDoubleDynArray;
procedure GenSetCallbackMethodBurstCompleted( hDevice : TLibTiePieHandle ; AMethod : TTpCallbackMethod );
procedure GenSetCallbackMethodControllableChanged( hDevice : TLibTiePieHandle ; AMethod : TTpCallbackMethod );
function I2CGetInternalAddressesDynArray( hDevice : TLibTiePieHandle ) : TWordDynArray;
function SrvGetURLWS( hServer : TLibTiePieHandle ) : WideString;
function SrvGetIDWS( hServer : TLibTiePieHandle ) : WideString;
function SrvGetNameWS( hServer : TLibTiePieHandle ) : WideString;
function SrvGetDescriptionWS( hServer : TLibTiePieHandle ) : WideString;
function SrvGetVersionExtraWS( hServer : TLibTiePieHandle ) : WideString;

{$ifdef LIBTIEPIE_DYNAMIC}
var
  {$ifdef MSWINDOWS}
  hLibTiePie : THandle = 0;
  {$else}
  hLibTiePie : TLibHandle = 0;
  {$endif !MSWINDOWS}
{$endif LIBTIEPIE_DYNAMIC}

implementation

uses
  {$if defined( LIBTIEPIE_DYNAMIC ) and not defined( MSWINDOWS )}
  dynlibs,
  {$ifend}
  SysUtils;

{$ifdef LIBTIEPIE_DYNAMIC}

function LibTiePieLoad( const sLibTiePieFileName : string = sLibTiePieFileNameDefault ) : Boolean;
begin
  if hLibTiePie = 0 then begin
    hLibTiePie := LoadLibrary( PAnsiChar( sLibTiePieFileName ) );
